# auto-pybind

./: .gitignore  .pre-commit-config.yaml  README.md  ext_build.py  pyproject.toml
csrcs/: CMakeLists.txt  greeter.cc  greeter.h  obj.h  pybind.cc  pybind.h  util.h  vcpkg.json
csrcs/tests/: test_describe.cc
python_template/hello_world/: greeter.py
tests/ext/: test_ext.py
